created farm animals function that takes value from the user through an input field

--- a/bring-it-on/index.html
+++ b/bring-it-on/index.html
@@ -12,7 +12,35 @@
 		<link rel="stylesheet" href="css/style.css">
 	</head>
 	<body>
-		<img src="img/bring-it-on.jpg" alt="Bring It On Movie DVD Cover">
+		
+		<section class="container">
+			<form action="" id="my-form">
+				<div id="msg"></div>
+
+				<div>
+					<label for="cows">Cows</label>
+					<input type="text" id="cows">
+				</div>
+			
+				<div>
+					<label for="chicken">Chickens</label>
+					<input type="text" id="chicken">
+				</div>
+				
+				<div>
+					<label for="pigs">Pigs</label>
+					<input type="text" id="pigs">
+				</div>
+				
+
+				<input type="submit" id="sumbit" class="btn">
+
+
+			</form>
+
+			<ul id="string-list"></ul>
+
+		</section>
 
 		<script type="text/javascript" src="js/main.js"></script>
 	</body>
